--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-  "name": "mar",
-  "version": "0.0.0",
+  "name": "actividad",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "serve": "nodemon ./bin/www"
+    "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "ejs": "^3.1.8",
-    "express": "^4.18.2",
+    "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "jsonwebtoken": "^9.0.0",
     "morgan": "~1.9.1",
-    "mysql": "^2.18.1",
-    "uuid": "^9.0.0"
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "@types/cookie-parser": "^1.4.3",
+    "dotenv": "^16.0.3",
+    "nodemon": "^2.0.20"
   }
 }
